--- a/portfolio.html
+++ b/portfolio.html
@@ -77,87 +77,80 @@
 	<!--main-->
 	<div class="main">
 
-		<div class="tile_main">
+		<div class="services_wrap">
 			<div class="row">
-				<div class="col-md-6" >
-					<div class="tile_item gray tile_center tile_main_txt">
-						<div class="tile_center_inner">
-							<h1>
-								Welcome to PixStream, <strong>Integrated marketing creative solutions.</strong>
-							</h1>
-							<p>Marketing // Broadcast // Branding //  Design //Management //  E-commerce // Web Solutions // Graphics App Development // Seo //  Event & Trade Show Marketing</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6">
-					<div class="row">
-						<div class="col-md-6 col-sm-6">
-							<div class="tile_item">
-								<img src="img/content_img.jpg" alt="">
-							</div>
-						</div>
-						<div class="col-md-6 col-sm-6">
-							<div class="tile_item">
-								<img src="img/content_img.jpg" alt="">
-							</div>
-						</div>
-					</div>	
-					<div class="row">
-						<div class="col-md-6 col-sm-6">
-							<div class="tile_item">
-								<img src="img/content_img.jpg" alt="">
-							</div>
-						</div>
-						<div class="col-md-6 col-sm-6">
-							<div class="tile_item gray tile_center tile_link_block">
-								<div class="tile_center_inner">
-									<div class="tile_link">
-										<em>VIMEO</em>
-										<strong><a href="#">AGENCY REEL <br> 2014</a></strong>
-										<a href="#">
-											<img src="img/video_icon.jpg" alt="">
-											<em>Play the Video</em>
-										</a>
-									</div>
-								</div>
-							</div>
+				<div class="col-md-12">
+					<div class="portfolio_slider">
+						<div class="fotorama" data-click="true" data-allowfullscreen="true" data-nav="false" data-arrows="true" data-width="100%" data-height="750" data-loop="true" >
+						  <img src="img/slider.jpg">
+						  <img src="http://s.fotorama.io/1.jpg">
+						  <img src="http://s.fotorama.io/2.jpg">
 						</div>
 					</div>	
 				</div>
 			</div>
-
 			<div class="row">
-				<div class="col-md-3  col-sm-6">
-					<div class="tile_item">
-						<img src="img/content_img.jpg" alt="">
-					</div>
-				</div>
-				<div class="col-md-3  col-sm-6">
-					<div class="tile_item">
-						<img src="img/content_img.jpg" alt="">
-					</div>
-				</div>
-				<div class="col-md-3  col-sm-6">
-					<div class="tile_item gray tile_center tile_link_block">
-						<div class="tile_center_inner">
-							<div class="tile_link">
-								<em>FACEBOOK</em>
-								<strong><a href="#">FOLLOW US <br>ON FACEBOOK</a></strong>
-								<a href="#">
-									<img src="img/facebook_icon.jpg" alt="">
-									<em>Like Us</em>
-								</a>
-							</div>
+				<div class="col-md-3">
+					<div class="services_block">
+						<h6>Lorem Ipsum <br>Dolor Sit Aeit</h6>
+						<section>
+							<dl>
+								<dt>MANDATE</dt>
+								<dd>Web Design</dd>
+							</dl>
+							<dl>
+								<dt>INDUSTRY</dt>
+								<dd>Health</dd>
+							</dl>
+							<dl>
+								<dt>DESCRIPTION</dt>
+								<dd>Lorem ipsum </dd>
+							</dl>
+							<a href="#">VIEW PROJECT</a>
+						</section>
+						<div class="share">
+							Share it:
+							<nav>
+								<a href="#"><img src="img/social_icon1.png" alt=""></a>
+								<a href="#"><img src="img/social_icon2.png" alt=""></a>
+								<a href="#"><img src="img/social_icon3.png" alt=""></a>
+								<a href="#"><img src="img/social_icon4.png" alt=""></a>
+								<a href="#"><img src="img/social_icon5.png" alt=""></a>
+							</nav>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3  col-sm-6">
-					<div class="tile_item">
-						<img src="img/content_img.jpg" alt="">
+				<div class="col-md-3">
+					<div class="services_block">
+						<article>
+							<h5>Lorem Ipsum</h5>
+							<p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem</p>
+						</article>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="services_block">
+						<article>
+							<h5>Lorem Ipsum</h5>
+							<p>Lorem IpsumLorem IpsumLorem IpsumLorem</p>
+						</article>
+					</div>
+					<div class="services_block">
+						<article>
+							<h5>Lorem Ipsum</h5>
+							<p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem</p>
+						</article>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="services_block">
+						<article>
+							<h5>Lorem Ipsum</h5>
+							<p>Lorem IpsumLorem IpsumLorem IpsumLorem</p>
+						</article>
 					</div>
 				</div>
 			</div>
-
 		</div>
 		
 	</div>
