--- a/video.html
+++ b/video.html
@@ -77,87 +77,46 @@
 	<!--main-->
 	<div class="main">
 
-		<div class="tile_main">
+		<div class="services_wrap">
 			<div class="row">
-				<div class="col-md-6" >
-					<div class="tile_item gray tile_center tile_main_txt">
-						<div class="tile_center_inner">
-							<h1>
-								Welcome to PixStream, <strong>Integrated marketing creative solutions.</strong>
-							</h1>
-							<p>Marketing // Broadcast // Branding //  Design //Management //  E-commerce // Web Solutions // Graphics App Development // Seo //  Event & Trade Show Marketing</p>
-						</div>
-					</div>
+				<div class="col-md-9">
+					<iframe src="https://player.vimeo.com/video/40056491" width="100%" height="546" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="services_img"></iframe>
 				</div>
-				<div class="col-md-6">
-					<div class="row">
-						<div class="col-md-6 col-sm-6">
-							<div class="tile_item">
-								<img src="img/content_img.jpg" alt="">
-							</div>
-						</div>
-						<div class="col-md-6 col-sm-6">
-							<div class="tile_item">
-								<img src="img/content_img.jpg" alt="">
-							</div>
-						</div>
-					</div>	
-					<div class="row">
-						<div class="col-md-6 col-sm-6">
-							<div class="tile_item">
-								<img src="img/content_img.jpg" alt="">
-							</div>
-						</div>
-						<div class="col-md-6 col-sm-6">
-							<div class="tile_item gray tile_center tile_link_block">
-								<div class="tile_center_inner">
-									<div class="tile_link">
-										<em>VIMEO</em>
-										<strong><a href="#">AGENCY REEL <br> 2014</a></strong>
-										<a href="#">
-											<img src="img/video_icon.jpg" alt="">
-											<em>Play the Video</em>
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>	
-				</div>
-			</div>
 
-			<div class="row">
-				<div class="col-md-3  col-sm-6">
-					<div class="tile_item">
-						<img src="img/content_img.jpg" alt="">
-					</div>
-				</div>
-				<div class="col-md-3  col-sm-6">
-					<div class="tile_item">
-						<img src="img/content_img.jpg" alt="">
-					</div>
-				</div>
-				<div class="col-md-3  col-sm-6">
-					<div class="tile_item gray tile_center tile_link_block">
-						<div class="tile_center_inner">
-							<div class="tile_link">
-								<em>FACEBOOK</em>
-								<strong><a href="#">FOLLOW US <br>ON FACEBOOK</a></strong>
-								<a href="#">
-									<img src="img/facebook_icon.jpg" alt="">
-									<em>Like Us</em>
-								</a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3  col-sm-6">
-					<div class="tile_item">
-						<img src="img/content_img.jpg" alt="">
+				<div class="col-md-3">
+					<div class="services_block white">
+						<br>
+						<br>
+						<br>
+						<br>
+						<br><br>
+						<br>
+						<br>
+						<br>
+						<br><br>
+						<br>
+						<br>
+						<br>
+						<br><br>
+						<br>
 					</div>
 				</div>
 			</div>
-
+			<div class="row">
+				<div class="col-md-3">
+					<div class="services_block"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
+				</div>
+				<div class="col-md-3">
+					<div class="services_block"><br><br><br><br><br><br><br><br><br></div>
+				</div>
+				<div class="col-md-3">
+					<div class="services_block"><br><br><br><br><br></div>
+					<div class="services_block"><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
+				</div>
+				<div class="col-md-3">
+					<div class="services_block"><br><br><br><br><br><br><br><br><br></div>
+				</div>
+			</div>
 		</div>
 		
 	</div>
