--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="portfolio_slider">
-						<div class="fotorama" data-click="true" data-allowfullscreen="true" data-nav="false" data-arrows="true" data-width="100%" data-height="750" data-loop="true" >
+						<div class="fotorama" data-click="true" data-allowfullscreen="true" data-nav="false" data-arrows="true" data-width="100%"  data-loop="true" >
 						  <img src="img/slider.jpg">
 						  <img src="http://s.fotorama.io/1.jpg">
 						  <img src="http://s.fotorama.io/2.jpg">
